name:          tictactoe
version:       0.0.0
build-type:    Simple
cabal-version: >= 1.18
copyright: 2015 Carlos Pereira
license:   MIT
synopsis:  basic tic-tac-toe game

flag documentation
  default: False

library
  default-language: Haskell2010
  exposed-modules: Tictactoe
  hs-source-dirs:  library
  build-depends:   base
  if flag(documentation)
    build-depends: hscolour == 1.20.*

executable tictactoe
  build-depends:    base, tictactoe
  default-language: Haskell2010
  hs-source-dirs:   executable
  main-is:          Main.hs

test-suite hspec
  build-depends:    base, tictactoe, hspec == 2.1.*
  default-language: Haskell2010
  hs-source-dirs:   test-suite library
  main-is:          Spec.hs
  type:             exitcode-stdio-1.0
  ghc-options:      -fhpc
  other-modules:    Tictactoe, TictactoeSpec

test-suite doctest
  build-depends:    base, doctest == 0.9.*, Glob == 0.7.*
  default-language: Haskell2010
  hs-source-dirs:   test-suite
  main-is:          DocTest.hs
  type:             exitcode-stdio-1.0

test-suite haddock
  build-depends:    base, process == 1.2.*, regex-compat == 0.95.*
  default-language: Haskell2010
  hs-source-dirs:   test-suite
  main-is:          Haddock.hs
  type:             exitcode-stdio-1.0

test-suite hpc
  build-depends:    base, process == 1.2.*, regex-compat == 0.95.*
  default-language: Haskell2010
  hs-source-dirs:   test-suite
  main-is:          HPC.hs
  type:             exitcode-stdio-1.0

test-suite hlint
  build-depends:    base, hlint == 1.9.*
  default-language: Haskell2010
  hs-source-dirs:   test-suite
  main-is:          HLint.hs
  type:             exitcode-stdio-1.0

benchmark criterion
  build-depends:    base, tictactoe, criterion == 1.1.0.*
  default-language: Haskell2010
  hs-source-dirs:   benchmark
  main-is:          Bench.hs
  type:             exitcode-stdio-1.0
